--- a/.dvt/default.build.auto.1
+++ b/.dvt/default.build.auto.1
@@ -1,7 +1,7 @@
 ################################################################################
 #                    DO NOT MANUALLY EDIT THIS FILE!                           #
 ################################################################################
-# This file contains the automatically generated build configuration (2023/03/02 09:46:23)
+# This file contains the automatically generated build configuration (2023/03/04 20:18:24)
 # requested at line 3 in D:\CAM\TCAM_Mem\.dvt\default.build
 
 
@@ -13,6 +13,8 @@
 
 # Available `ifdef / `ifndef controls:
 # +define+FSDB
+# +define+NO_MEM_MSG
 
+SFLA40_16X8BW16.v
 Mem.sv
 tb.sv
